# Projects

./: README.md
10. Gestion de projet/: Project_presentation.pptx
2.Analyse_de_données/: README.md
3.Analyse_autocomplétion/: README.md
4. Prédiction CO2 et conso/: README.md  ~$Project_presentation.pptx
4.Prédiction_CO2_et_conso/: README.md  pyproject.toml
5. Segmentation clients/: README.md
6. Classification Images et NLP/: README.md
7. API REST scoring/: README.md  requirements.txt
8. Dashboard interactif scoring/: Project_presentation.pptx  README.md
8.Dashboard_interactif_scoring/: pyproject.toml
9. Architecture Big Data (AWS)/: Project_presentation.pptx  README.md
9.Architecture_Big_Data_(AWS)/: README.md
Project 10/: Backlogs.xlsx  Project_Management.xlsx  README.md
Project 2/: README.md
Project 3/: Project_presentation.pptx  README.md
Project 4/: README.md
Project 5/: Project_presentation.pptx  README.md
Project 6/: Project_presentation.pptx  README.md
Project 7/: README.md
Project 8/: README.md  Technology_Watch_Notebook.ipynb  pyproject.toml
Project 8/Dashboard_Streamlit/: Dashboard.py  requirements.txt
Project 8/Dashboard_Streamlit/Data/: infos_classes.csv  infos_data.csv  infos_glo.csv  infos_glo_complete.csv  shap_df.csv  shap_samples_negative.csv  shap_samples_positive.csv
Project 8/Dashboard_Streamlit/pages/: 1_Analyse_Critères.py
Project 9/: Creation_Training_set.ipynb  Pyspark_Notebook.ipynb  README.md
Projet 3/: README.md
Projet 4/: Project_presentation.pptx  pyproject.toml
Projet 5/: README.md
(+72 files in other folders)
