[tool.poetry]
name = "projet8"
version = "0.1.0"
description = ""
authors = ["Heneault-IA <thomas.heneault@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "6.4.13"
opencv-python = "^4.8.1.78"
opencv-contrib-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow-intel = "^2.15.0"
tensorflow = "2.15.0"
plot-keras-history = "^1.1.38"
transformers = "^4.36.1"
tensorflow-hub = "^0.15.0"
yapf = "^0.40.2"
autopep8 = "^2.0.4"
tensorflow-addons = "0.20"
randaugment = "^1.0.2"
keras-cv = "^0.8.1"
shap = "^0.44.1"
scikit-image = "^0.22.0"
colorcet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
